# SellerHarbor

./: .dockerignore  .env.docker.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: review_generation.py
backend/app/api/: routes.py
backend/app/core/: config.py  tenant.py
backend/app/db/: repository.py
backend/app/models/: schemas.py
backend/app/services/: business_overview.py  commerce_overview.py  feedback_organizer.py  llm.py  market_ingestion.py  object_storage.py  observability.py  platform_rules.py  product_sourcing.py  rate_limit.py  readiness.py  store_registry.py  temu_integration.py
backend/app/utils/: ids.py
backend/tests/: test_api_smoke.py
docs/: ARCHITECTURE.md  CAPABILITY_PLAN.md  DOCKER.md  PRD.md  PROMPTING.md  README.md  ROADMAP.md  SAFETY_AND_COMPLIANCE.md  STORE_MANAGEMENT.md  TEMU_INTEGRATION.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: error.tsx  layout.tsx
frontend/src/components/common/: ConfigTags.tsx  EmptyState.tsx  PageHeader.tsx  QualityBar.tsx  ReviewStatusTag.tsx  RiskTag.tsx  ScoreBadge.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  MobileNav.tsx  Sidebar.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/stores/: appStore.ts  dataStore.ts
frontend/src/lib/types/: index.ts
(+10 files in other folders)
